Corrected Alignment/Margin for Countdown

--- a/mod_countdown/modules/mod_countdown/media/countdown.css
+++ b/mod_countdown/modules/mod_countdown/media/countdown.css
@@ -15,6 +15,8 @@
 }
 
 .countdown > div div + div {
+	position: relative;
+	left: -1px;
 	margin-top: 5px;
 	
 	color: #fff;
